# win-mouse-positioner

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FastCompile.cmake  GTest.cmake
includes/nlohmann/: json.hpp
src/: config.hpp  controller.hpp  keyboard-listener.hpp  main.cpp  monitor.hpp
src/hotkey/: index.hpp
src/hotkey/__test__/: index.test.cpp
src/utils/: g-test.hpp  vk-codes.h
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  ConfigManager.ts  main.tsx  types.ts
web/src/utils/: vk-codes.ts
